--- a/.env
+++ b/.env
@@ -1,13 +1,11 @@
 # ---- Authorization Client Settings ----
-IMJS_AUTH_CLIENT_CLIENT_ID = ""
-IMJS_AUTH_CLIENT_REDIRECT_URI = ""
-IMJS_AUTH_CLIENT_LOGOUT_URI = ""
-IMJS_AUTH_CLIENT_SCOPES ="imodelaccess:read imodels:read realitydata:read"
-IMJS_AUTH_AUTHORITY="https://ims.bentley.com"
-
+IMJS_AUTH_CLIENT_CLIENT_ID=spa-V2dXafRnOhlPuU4BjaOEln1yU
+IMJS_AUTH_CLIENT_REDIRECT_URI=http://localhost:3000/signin-callback
+IMJS_AUTH_CLIENT_LOGOUT_URI=http://localhost:3000/logout
+IMJS_AUTH_CLIENT_SCOPES="imodelaccess:read imodels:read realitydata:read"
 # ---- Test ids ----
-IMJS_ITWIN_ID = ""
-IMJS_IMODEL_ID = ""
+IMJS_ITWIN_ID=94421a83-259a-4bad-9464-70c73e1a546c
+IMJS_IMODEL_ID=f8be6d2f-f105-4d6f-958e-11074ca2e2ad
 
 # Advanced CRA Config: https://create-react-app.dev/docs/advanced-configuration/
 SKIP_PREFLIGHT_CHECK=true
